force-app/main/default/objects/Lead_Routing_Rule__mdt/Lead_Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <label>MQL Routing Rule</label>
    <pluralLabel>MQL Routing Rules</pluralLabel>
</CustomObject>