force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Opportunity</fullName>
                <default>true</default>
                <label>Active Opportunity</label>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Lost Opportunity</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer w/Opp</fullName>
            </value>
            <value>
                <fullName>Account Based Routing</fullName>
            </value>
            <value>
                <fullName>Existing Customer with New Sale Opportunity</fullName>
                <isActive>false</isActive>
                <label>Existing Customer with New Sale Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>