force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
                <default>true</default>
                <label>ENT</label>
            </value>
            <value>
                <fullName>MAJORS</fullName>
            </value>
            <value>
                <fullName>AMER-FED</fullName>
            </value>
            <value>
                <fullName>AMER-SLED</fullName>
            </value>
            <value>
                <fullName>MM-AMER</fullName>
            </value>
            <value>
                <fullName>CEUR</fullName>
            </value>
            <value>
                <fullName>NEUR</fullName>
            </value>
            <value>
                <fullName>SEUR</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>WEUR</fullName>
            </value>
            <value>
                <fullName>MM-EMEA</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
            <value>
                <fullName>INDIA-A</fullName>
            </value>
            <value>
                <fullName>MM-APAC-A</fullName>
            </value>
            <value>
                <fullName>JAPAN-A</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>