force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/BDM_Formula__c.field-meta.xml
<CustomField>
    <fullName>BDM_Formula__c</fullName>
    <label>BDM</label>
    <length>5</length>
    <type>Text</type>
</CustomField>