force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Campaign_Routing_Method__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Routing_Method__c</fullName>
    <label>Campaign Routing Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>