force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/CXO__c.field-meta.xml
<CustomField>
    <fullName>CXO__c</fullName>
    <label>CXO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>