force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Fallback__c.field-meta.xml
<CustomField>
    <fullName>Fallback__c</fullName>
    <label>Fallback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>