force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Fallback_Source__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Source__c</fullName>
    <label>Fallback Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Account Territory</fullName>
            </value>
            <value>
                <fullName>Next Rule</fullName>
            </value>
            <value>
                <fullName>HardCoded User</fullName>
            </value>
            <value>
                <fullName>Patch Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>