force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/FalloutV2__c.field-meta.xml
<CustomField>
    <fullName>FalloutV2__c</fullName>
    <label>FalloutV2</label>
    <type>TextArea</type>
</CustomField>