force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>