force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/PatchManager_Type__c.field-meta.xml
<CustomField>
    <fullName>PatchManager_Type__c</fullName>
    <label>PatchManager Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domain</fullName>
                <default>true</default>
                <label>Domain</label>
            </value>
            <value>
                <fullName>L2A</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Geographic</fullName>
            </value>
            <value>
                <fullName>Federal BDM</fullName>
                <isActive>false</isActive>
                <label>Federal BDM</label>
            </value>
            <value>
                <fullName>L2A BDM</fullName>
                <isActive>false</isActive>
                <label>L2A BDM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>