force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Routing_Source__c.field-meta.xml
<CustomField>
    <fullName>Routing_Source__c</fullName>
    <label>Routing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Patch Key</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>Hard-coded</fullName>
            </value>
            <value>
                <fullName>Account Territory</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>PatchKey-RoundRobin</fullName>
            </value>
            <value>
                <fullName>Current Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>