force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <label>Theatre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>CDP</fullName>
            </value>
            <value>
                <fullName>SDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>