force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/User_Role_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Field_Value__c</fullName>
    <label>User Role/Field/Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>