force-app/main/default/objects/Lead_Routing_Rule__mdt/listViews/All_Views1.listView-meta.xml
<ListView>
    <fullName>All_Views1</fullName>
    <columns>Priority__c</columns>
    <columns>MasterLabel</columns>
    <columns>Campaign_Routing_Method__c</columns>
    <columns>Account_Status__c</columns>
    <columns>BDM_Formula__c</columns>
    <columns>PatchManager_Type__c</columns>
    <columns>ObjectName__c</columns>
    <columns>Routing_Source__c</columns>
    <columns>User_Role_Field_Value__c</columns>
    <columns>Fallback_Source__c</columns>
    <columns>Fallback__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Views1</label>
</ListView>